--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
      <h1>titulo del proyecto</h1>
-     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam labore, ducimus hic deserunt similique numquam fuga ea nihil in ipsa enim nisi mollitia dolorem quisquam deleniti veritatis ipsum. Necessitatibus, consequatur.
+     <p>Lorem ipsum dolor, Mario crack sit amet consectetur adipisicing elit. Totam labore, ducimus hic deserunt similique numquam fuga ea nihil in ipsa enim nisi mollitia dolorem quisquam deleniti veritatis ipsum. Necessitatibus, consequatur.
      </p>
 </body>
 </html>
