--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
      <h1>titulo del proyecto</h1>
      <p>Lorem ipsum dolor, Mario crack sit amet consectetur adipisicing elit. Totam labore, ducimus hic deserunt similique numquam fuga ea nihil in ipsa enim nisi mollitia dolorem quisquam deleniti veritatis ipsum. Necessitatibus, consequatur.
      </p>
+    <h2>segundo titulo del proyecto</h2>
 </body>
 </html>
