--- a/ProNet_Sotfware_Services/index.html
+++ b/ProNet_Sotfware_Services/index.html
@@ -1,13 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ProNet Services</title>
-    <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
-    
-</body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/body.css" />
+    <link rel="stylesheet" href="css/header.css" />
+    <link rel="stylesheet" href="css/nav.css">
+  </head>
+  <body class="grid-container">
+    <header class="header">
+        <img src="https://amincodes.com/html/flex-it/assets/images/hero/illustration-1.png" alt="">
+    </header>
+      <nav>
+        <a href="#" class="logo">ProNet Services</a>
+        <ul>
+          <li>
+            <a href="#">Inicio</a>
+          </li>
+          <li>
+            <a href="#">Nosotros</a>
+          </li>
+          <li>
+            <a href="#">Servicios</a>
+          </li>
+          <li>
+            <a href="#">Portafolio</a>
+          </li>
+          <li>
+            <a href="#">Contacto</a>
+          </li>
+        </ul>
+      </nav>
+    <aside class="sidebar">sidebar</aside>
+    <article class="main">principal</article>
+    <footer class="footer">footer</footer>
+  </body>
 </html>
