agregando una imagen

--- a/ProNet_Sotfware_Services/index.html
+++ b/ProNet_Sotfware_Services/index.html
@@ -38,6 +38,7 @@
             <a href="#">Contacto</a>
           </li>
         </ul>
+        <a href="#"><img src="#" alt="informacion legal"></a>
       </nav>
     <aside class="sidebar">sidebar</aside>
     <article class="main">principal</article>
