--- a/ProNet_Sotfware_Services/index.html
+++ b/ProNet_Sotfware_Services/index.html
@@ -14,9 +14,13 @@
     <link rel="stylesheet" href="css/body.css" />
     <link rel="stylesheet" href="css/header.css" />
     <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="js/main.js">
   </head>
   <body class="grid-container">
     <header class="header">
+        <div class="titulo"><h1>WELCOME TO PRONET SERVICES</h1>
+            <h2>Una empresa dedicada en la calidad del sofware</h2>
+        </div>
         <img src="https://amincodes.com/html/flex-it/assets/images/hero/illustration-1.png" alt="">
     </header>
       <nav>
