creacion del main, breve descripcion de las actividades que se realizan en la empresa, iconos subidos, modificaciones de ciertos aspectos de l0os estilos, como por ejemplo los @import

--- a/ProNet_Sotfware_Services/index.html
+++ b/ProNet_Sotfware_Services/index.html
@@ -1,51 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ProNet Services</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="css/body.css" />
-    <link rel="stylesheet" href="css/header.css" />
-    <link rel="stylesheet" href="css/nav.css">
-    <link rel="stylesheet" href="js/main.js">
-  </head>
-  <body class="grid-container">
+    <script href="js/main.js"></script>
+</head>
+
+<body class="grid-container">
     <header class="header">
-        <div class="titulo"><h1>WELCOME TO PRONET SERVICES</h1>
+        <div class="titulo">
+            <h1>WELCOME TO PRONET SERVICES</h1>
             <h2>Una empresa dedicada en la calidad del sofware</h2>
         </div>
         <img src="https://amincodes.com/html/flex-it/assets/images/hero/illustration-1.png" alt="">
     </header>
-      <nav>
+    <nav>
         <a href="#" class="logo">ProNet Services</a>
         <ul>
-          <li>
-            <a href="#">Inicio</a>
-          </li>
-          <li>
-            <a href="#">Nosotros</a>
-          </li>
-          <li>
-            <a href="#">Servicios</a>
-          </li>
-          <li>
-            <a href="#">Portafolio</a>
-          </li>
-          <li>
-            <a href="#">Contacto</a>
-          </li>
+            <li>
+                <a href="#">Inicio</a>
+            </li>
+            <li>
+                <a href="#">Nosotros</a>
+            </li>
+            <li>
+                <a href="#">Servicios</a>
+            </li>
+            <li>
+                <a href="#">Portafolio</a>
+            </li>
+            <li>
+                <a href="#">Contacto</a>
+            </li>
         </ul>
         <a href="#"><img src="#" alt="informacion legal"></a>
-      </nav>
+    </nav>
+    <article class="main">
+        <div class="main-container">
+            <div class="main-title">
+                <h2>¿QUE HACEMOS?</h2>
+            </div>
+            <div class="main-items-container">
+                <div class="main-items">
+                    <img src="img/web-browser.png" alt="desarrollo web">
+                    <h3>Desarrollo Web</h3>
+                    <p>Desarrollamos sitios web personalizados con HTML, CSS y JavaScript, enfocándonos en diseño
+                        responsive
+                        y soluciones funcionales para nuestros clientes</p>
+                </div>
+                <div class="main-items">
+                    <img src="img/ingenieria.png" alt="">
+                    <h3>Desarrollo De Sotware</h3>
+                    <p>Desarrollamos soluciones personalizadas de software utilizando metodologías ágiles y tecnologías
+                        avanzadas para satisfacer las necesidades de nuestros clientes</p>
+                </div>
+                <div class="main-items">
+                    <img src="img/app-del-clima.png" alt="aplicaciones">
+                    <h3>Creacion De Aplicaciones</h3>
+                    <p>En nuestra organización, creamos aplicaciones utilizando tecnologías y
+                        metodologías innovadoras para satisfacer las necesidades de nuestros clientes</p>
+                </div>
+                <div class="main-items">
+                    <img src="img/web-maintenance.png" alt="">
+                    <h3>Mantenimiento De Servidores</h3>
+                    <p>Proporcionamos servicios de mantenimiento de servidores con enfoque en la seguridad, rendimiento
+                        y actualizaciones periódicas para garantizar su funcionamiento óptimo</p>
+                </div>
+            </div>
+        </div>
+    </article>
     <aside class="sidebar">sidebar</aside>
-    <article class="main">principal</article>
     <footer class="footer">footer</footer>
-  </body>
+</body>
+
 </html>
