--- a/ProNet_Sotfware_Services/index.html
+++ b/ProNet_Sotfware_Services/index.html
@@ -62,7 +62,7 @@
           <a href="#">Portafolio</a>
         </li>
         <li>
-          <a href="#">Contacto</a>
+          <a href="#contacto">Contacto</a>
         </li>
       </ul>
     </nav>
@@ -111,7 +111,7 @@
           </figure>
         </div>
         <div class="box">
-          <h2>SOBRE NOSOTROS</h2>
+          <h2 id="contacto">SOBRE NOSOTROS</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?
           </p>
