--- a/ProNet_Sotfware_Services/index.html
+++ b/ProNet_Sotfware_Services/index.html
@@ -53,7 +53,7 @@
           <a href="#">Servicios</a>
         </li>
         <li>
-          <a href="#">Portafolio</a>
+          <a href="#">Terminos Legales</a>
         </li>
         <li>
           <a href="#contacto">Contacto</a>
