--- a/ProNet_Sotfware_Services/index.html
+++ b/ProNet_Sotfware_Services/index.html
@@ -1,40 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ProNet Services</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-        integrity="sha512-xpN9EXCEvNka0CQsBj8kV4ATmTujVa/8jhrhGm+kzLkaeNp1eXdJFvtG4E+bvL+9XaAzAPq4K+drCKptiCsMTw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      integrity="sha512-xpN9EXCEvNka0CQsBj8kV4ATmTujVa/8jhrhGm+kzLkaeNp1eXdJFvtG4E+bvL+9XaAzAPq4K+drCKptiCsMTw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/body.css" />
     <link rel="stylesheet" href="css/header.css" />
     <link rel="stylesheet" href="css/nav.css" />
     <link rel="stylesheet" href="css/footer.css" />
-    <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/eb496ab1a0.js"
+      crossorigin="anonymous"
+    ></script>
     <script>
-        window.addEventListener("scroll", function () {
-            var nav = document.querySelector("nav");
-            nav.classList.toggle("abajo", window.scrollY > 0);
-        });
+      window.addEventListener("scroll", function () {
+        var nav = document.querySelector("nav");
+        nav.classList.toggle("abajo", window.scrollY > 0);
+      });
     </script>
-</head>
+  </head>
 
-<body class="grid-container">
+  <body class="grid-container">
     <header class="header">
-        <div class="content-header">
-            <div class="titulo">
-                <h1>WELCOME <br />TO PRONET SERVICES</h1>
-                <h2>Una empresa dedicada en la calidad del sofware</h2>
-            </div>
-            <img src="https://amincodes.com/html/flex-it/assets/images/hero/illustration-1.png" alt="" />
+      <div class="content-header">
+        <div class="titulo">
+          <h1>WELCOME <br />TO PRONET SERVICES</h1>
+          <h2>Una empresa dedicada en la calidad del sofware</h2>
         </div>
+        <img
+          src="https://amincodes.com/html/flex-it/assets/images/hero/illustration-1.png"
+          alt=""
+        />
+      </div>
     </header>
     <nav class="nav-menu">
       <input type="checkbox" id="check" />
@@ -53,101 +65,116 @@
           <a href="#">Servicios</a>
         </li>
         <li>
-          <a href="#">Portafolio</a>
+          <a href="#">Terminos Legales</a>
         </li>
         <li>
-          <a href="#contacto">Contacto</a>
+          <a href="#r">Contacto</a>
         </li>
       </ul>
     </nav>
     <article class="main">
-        <div class="main-container">
-            <div class="main-title">
-                <h2>¿QUE HACEMOS?</h2>
-            </div>
-            <div class="main-items-container">
-                <div class="main-items">
-                    <img src="img/web-browser.png" alt="desarrollo web">
-                    <h3>Desarrollo Web</h3>
-                    <p>Desarrollamos sitios web personalizados con HTML, CSS y JavaScript, enfocándonos en diseño
-                        responsive
-                        y soluciones funcionales para nuestros clientes</p>
-                </div>
-                <div class="main-items">
-                    <img src="img/ingenieria.png" alt="">
-                    <h3>Desarrollo De Sotware</h3>
-                    <p>Desarrollamos soluciones personalizadas de software utilizando metodologías ágiles y tecnologías
-                        avanzadas para satisfacer las necesidades de nuestros clientes</p>
-                </div>
-                <div class="main-items">
-                    <img src="img/app-del-clima.png" alt="aplicaciones">
-                    <h3>Creacion De Aplicaciones</h3>
-                    <p>En nuestra organización, creamos aplicaciones utilizando tecnologías y
-                        metodologías innovadoras para satisfacer las necesidades de nuestros clientes</p>
-                </div>
-                <div class="main-items">
-                    <img src="img/web-maintenance.png" alt="">
-                    <h3>Mantenimiento De Servidores</h3>
-                    <p>Proporcionamos servicios de mantenimiento de servidores con enfoque en la seguridad, rendimiento
-                        y actualizaciones periódicas para garantizar su funcionamiento óptimo</p>
-                </div>
-            </div>
+      <div class="main-container">
+        <div class="main-title">
+          <h2>¿QUE HACEMOS?</h2>
         </div>
-        <div class="about">
-            <div class="about-title">
-                <h2>SOBRE NOSOTROS</h2>
-            </div>
-            <div class="about-container">
-                <div class="about-items">
-                    <h3>MISION</h3>
-                    <p>Brindar soluciones tecnológicas innovadoras y confiables, superando las expectativas de nuestros
-                        clientes y garantizando su éxito en el mundo digita</p>
-                </div>
-                <div class="about-items">
-                    <h3>VISION</h3>
-                    <p>Ser líderes reconocidos en el mercado, impulsando el crecimiento tecnológico de las
-                        organizaciones y mejorando la calidad de vida de las personas a través de nuestras soluciones y
-                        servicios.</p>
-                </div>
-            </div>
+        <div class="main-items-container">
+          <div class="main-items">
+            <img src="img/web-browser.png" alt="desarrollo web" />
+            <h3>Desarrollo Web</h3>
+            <p>
+              Desarrollamos sitios web personalizados con HTML, CSS y
+              JavaScript, enfocándonos en diseño responsive y soluciones
+              funcionales para nuestros clientes
+            </p>
+          </div>
+          <div class="main-items">
+            <img src="img/ingenieria.png" alt="" />
+            <h3>Desarrollo De Sotware</h3>
+            <p>
+              Desarrollamos soluciones personalizadas de software utilizando
+              metodologías ágiles y tecnologías avanzadas para satisfacer las
+              necesidades de nuestros clientes
+            </p>
+          </div>
+          <div class="main-items">
+            <img src="img/app-del-clima.png" alt="aplicaciones" />
+            <h3>Creacion De Aplicaciones</h3>
+            <p>
+              En nuestra organización, creamos aplicaciones utilizando
+              tecnologías y metodologías innovadoras para satisfacer las
+              necesidades de nuestros clientes
+            </p>
+          </div>
+          <div class="main-items">
+            <img src="img/web-maintenance.png" alt="" />
+            <h3>Mantenimiento De Servidores</h3>
+            <p>
+              Proporcionamos servicios de mantenimiento de servidores con
+              enfoque en la seguridad, rendimiento y actualizaciones periódicas
+              para garantizar su funcionamiento óptimo
+            </p>
+          </div>
         </div>
+      </div>
+      <div class="about">
+        <div class="about-title">
+          <h2>SOBRE NOSOTROS</h2>
+        </div>
+        <div class="about-container">
+          <div class="about-items">
+            <h3>MISION</h3>
+            <p>
+              Brindar soluciones tecnológicas innovadoras y confiables,
+              superando las expectativas de nuestros clientes y garantizando su
+              éxito en el mundo digita
+            </p>
+          </div>
+          <div class="about-items">
+            <h3>VISION</h3>
+            <p>
+              Ser líderes reconocidos en el mercado, impulsando el crecimiento
+              tecnológico de las organizaciones y mejorando la calidad de vida
+              de las personas a través de nuestras soluciones y servicios.
+            </p>
+          </div>
+        </div>
+      </div>
     </article>
-
-
-
     <aside class="sidebar">sidebar</aside>
-    <footer class="footer">
-        <div class="grupo-1">
-            <div class="box">
-                <figure>
-                    <a href="#">
-                        <img src="svg/" alt="Logo de la empresa" />
-                    </a>
-                </figure>
-            </div>
-            <div class="box">
-                <h2>SOBRE NOSOTROS</h2>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?
-                </p>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?
-                </p>
-            </div>
-            <div class="box">
-                <h2>SIGUENOS</h2>
-                <div class="red-social">
-                    <a href="#" class="fa fa-facebook"></a>
-                    <a href="#" class="fa fa-instagram"></a>
-                    <a href="#" class="fa fa-twitter"></a>
-                    <a href="#" class="fa fa-youtube"></a>
-                </div>
-            </div>
+    <footer class="footer" id="r">
+      <div class="grupo-1">
+        <div class="box">
+          <figure>
+            <a href="#">
+              <img src="svg/" alt="Logo de la empresa" />
+            </a>
+          </figure>
         </div>
-        <div class="grupo-2">
-            <small>&copy; 2023 <b>ProNet Services</b> - Todos los Derechos Reservados.</small>
+        <div class="box">
+          <h2>SOBRE NOSOTROS</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?
+          </p>
         </div>
+        <div class="box">
+          <h2>SIGUENOS</h2>
+          <div class="red-social">
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-instagram"></a>
+            <a href="#" class="fa fa-twitter"></a>
+            <a href="#" class="fa fa-youtube"></a>
+          </div>
+        </div>
+      </div>
+      <div class="grupo-2">
+        <small
+          >&copy; 2023 <b>ProNet Services</b> - Todos los Derechos
+          Reservados.</small
+        >
+      </div>
     </footer>
-</body>
-
+  </body>
 </html>
