--- a/ProNet_Sotfware_Services/pages/Terminos.html
+++ b/ProNet_Sotfware_Services/pages/Terminos.html
@@ -19,10 +19,10 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/body.css" />
-    <link rel="stylesheet" href="css/header.css" />
-    <link rel="stylesheet" href="css/nav.css" />
-    <link rel="stylesheet" href="css/footer.css" />
+    <link rel="stylesheet" href="../css/terminos.css" />
+    <link rel="stylesheet" href="../css/header.css" />
+    <link rel="stylesheet" href="../css/nav.css" />
+    <link rel="stylesheet" href="../css/footer.css" />
     <script
       src="https://kit.fontawesome.com/eb496ab1a0.js"
       crossorigin="anonymous"
@@ -56,7 +56,7 @@
       <a href="#" class="title">ProNet Services</a>
       <ul>
         <li>
-          <a href="#">Inicio</a>
+          <a href="../index.html">Inicio</a>
         </li>
         <li>
           <a href="#">Nosotros</a>
@@ -65,7 +65,7 @@
           <a href="#">Servicios</a>
         </li>
         <li>
-          <a href="./pages/Terminos.html">Terminos Legales</a>
+          <a href="#">Terminos Legales</a>
         </li>
         <li>
           <a href="#r">Contacto</a>
@@ -73,74 +73,8 @@
       </ul>
     </nav>
     <article class="main">
-      <div class="main-container">
-        <div class="main-title">
-          <h2>¿QUE HACEMOS?</h2>
-        </div>
-        <div class="main-items-container">
-          <div class="main-items">
-            <img src="img/web-browser.png" alt="desarrollo web" />
-            <h3>Desarrollo Web</h3>
-            <p>
-              Desarrollamos sitios web personalizados con HTML, CSS y
-              JavaScript, enfocándonos en diseño responsive y soluciones
-              funcionales para nuestros clientes
-            </p>
-          </div>
-          <div class="main-items">
-            <img src="img/ingenieria.png" alt="" />
-            <h3>Desarrollo De Sotware</h3>
-            <p>
-              Desarrollamos soluciones personalizadas de software utilizando
-              metodologías ágiles y tecnologías avanzadas para satisfacer las
-              necesidades de nuestros clientes
-            </p>
-          </div>
-          <div class="main-items">
-            <img src="img/app-del-clima.png" alt="aplicaciones" />
-            <h3>Creacion De Aplicaciones</h3>
-            <p>
-              En nuestra organización, creamos aplicaciones utilizando
-              tecnologías y metodologías innovadoras para satisfacer las
-              necesidades de nuestros clientes
-            </p>
-          </div>
-          <div class="main-items">
-            <img src="img/web-maintenance.png" alt="" />
-            <h3>Mantenimiento De Servidores</h3>
-            <p>
-              Proporcionamos servicios de mantenimiento de servidores con
-              enfoque en la seguridad, rendimiento y actualizaciones periódicas
-              para garantizar su funcionamiento óptimo
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="about">
-        <div class="about-title">
-          <h2>SOBRE NOSOTROS</h2>
-        </div>
-        <div class="about-container">
-          <div class="about-items">
-            <h3>MISION</h3>
-            <p>
-              Brindar soluciones tecnológicas innovadoras y confiables,
-              superando las expectativas de nuestros clientes y garantizando su
-              éxito en el mundo digita
-            </p>
-          </div>
-          <div class="about-items">
-            <h3>VISION</h3>
-            <p>
-              Ser líderes reconocidos en el mercado, impulsando el crecimiento
-              tecnológico de las organizaciones y mejorando la calidad de vida
-              de las personas a través de nuestras soluciones y servicios.
-            </p>
-          </div>
-        </div>
-      </div>
+      
     </article>
-    <aside class="sidebar">sidebar</aside>
     <footer class="footer" id="r">
       <div class="grupo-1">
         <div class="box">
