ultimo cambio local

--- a/ProNet_Sotfware_Services/index.html
+++ b/ProNet_Sotfware_Services/index.html
@@ -65,7 +65,7 @@
           <a href="#">Servicios</a>
         </li>
         <li>
-          <a href="#">Terminos Legales</a>
+          <a href="tlegales.html">Terminos Legales</a>
         </li>
         <li>
           <a href="#r">Contacto</a>
