--- a/ProNet_Sotfware_Services/pages/Terminos.html
+++ b/ProNet_Sotfware_Services/pages/Terminos.html
@@ -51,7 +51,7 @@
     <nav class="nav-menu">
       <input type="checkbox" id="check" />
       <label for="check" class="checkbtn">
-        <i class="menu-icon"><img src="svg/menu-svgrepo-com.svg" /></i>
+        <i class="menu-icon"><img src="../svg/menu-svgrepo-com.svg" /></i>
       </label>
       <a href="#" class="title">ProNet Services</a>
       <ul>
