--- a/ProNet_Sotfware_Services/pages/Terminos.html
+++ b/ProNet_Sotfware_Services/pages/Terminos.html
@@ -73,7 +73,9 @@
       </ul>
     </nav>
     <article class="main">
+    <div class="container-tyc">
       
+    </div>
     </article>
     <footer class="footer" id="r">
       <div class="grupo-1">
