--- a/ProNet_Sotfware_Services/pages/Terminos.html
+++ b/ProNet_Sotfware_Services/pages/Terminos.html
@@ -73,9 +73,19 @@
       </ul>
     </nav>
     <article class="main">
-    <div class="container-tyc">
       
-    </div>
+    <div class="container-tyc">
+      <div class="tyc-title">
+        <h2>LEGALIDAD DE LA EMPRESA, COMO OPERAMOS</h2>
+      </div>
+      <div class="tyc-container-two">
+        <div class="tyc-1">
+          <img src="../img/camara-comercio-fit.png" alt="camara del comercio">
+        </div>
+        <div class="tyc-2"></div>
+      </div>
+      </div>
+      
     </article>
     <footer class="footer" id="r">
       <div class="grupo-1">
