--- a/ProNet_Sotfware_Services/pages/Terminos.html
+++ b/ProNet_Sotfware_Services/pages/Terminos.html
@@ -82,7 +82,12 @@
         <div class="tyc-1">
           <img src="../img/camara-comercio-fit.png" alt="camara del comercio">
         </div>
-        <div class="tyc-2"></div>
+        <div class="tyc-2">
+          <div class="tyc-it"></div>
+          <div class="tyc-it"></div>
+          <div class="tyc-it"></div>
+          <div class="tyc-it"></div>
+        </div>
       </div>
       </div>
       
