ultimo cambio de los terminos legales

--- a/ProNet_Sotfware_Services/pages/Terminos.html
+++ b/ProNet_Sotfware_Services/pages/Terminos.html
@@ -83,10 +83,21 @@
           <img src="../img/camara-comercio-fit.png" alt="camara del comercio">
         </div>
         <div class="tyc-2">
-          <div class="tyc-it"></div>
-          <div class="tyc-it"></div>
-          <div class="tyc-it"></div>
-          <div class="tyc-it"></div>
+          <div class="tyc-it-e">
+            <h3>NUESTROS ESTATUTOS</h3>
+            <p>Los estatutos de nuestra empresa con fines de lucro, PRO NET SERVICES, establecen cómo gobernamos y estructuramos nuestras operaciones en el apasionante mundo de las nuevas tecnologías. Además, nos comprometemos a implementar un seguimiento constante en línea con las políticas del Ministerio de las TIC para impulsar la innovación y el desarrollo tecnológico en beneficio de nuestros clientes y del crecimiento del sector.</p>
+          </div>
+          <div class="tyc-it">
+            <h3>RAZON SOCIAL</h3>
+            <p>Pronet Services Group S.A.</p>
+          </div>
+          <div class="tyc-it-f">
+            <h3>OBJETIVOS DEL GRUPO</h3>
+            <p>
+              Objetivo general:
+              Establecer una empresa la cual brinda servicios de desarrollo de software en la ciudad de Riohacha, esto es dependiendo puede ser para la ciudad o para la guajira, colombia o el mundo.
+            </p>
+          </div>
         </div>
       </div>
       </div>
